--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ DATABASE_URL_DIRECT="postgresql://username:password@host/database?sslmode=requir
 # NextAuth.js
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="your-secret-key-here-change-in-production"
+AUTH_SECRET="your-secret-key-here-change-in-production"
 
 # Stripe
 STRIPE_PUBLIC_KEY="pk_test_..."
