--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "db:seed": "dotenv -e .env.local -- tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/adapter-neon": "^6.16.3",
     "@prisma/client": "^6.16.3",
+    "bcryptjs": "^3.0.2",
     "next": "15.5.4",
+    "next-auth": "^5.0.0-beta.29",
     "prisma": "^6.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -29,6 +32,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
