--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ NEXTAUTH_SECRET="your-secret-key-here-change-in-production"
 AUTH_SECRET="your-secret-key-here-change-in-production"
 
 # Stripe
-STRIPE_PUBLIC_KEY="pk_test_..."
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_..."
 STRIPE_SECRET_KEY="sk_test_..."
 STRIPE_WEBHOOK_SECRET="whsec_..."
 
