--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/adapter-neon": "^6.16.3",
     "@prisma/client": "^6.16.3",
+    "@stripe/stripe-js": "^8.0.0",
     "bcryptjs": "^3.0.2",
     "next": "15.5.4",
     "next-auth": "^5.0.0-beta.29",
     "prisma": "^6.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "stripe": "^19.1.0",
     "ws": "^8.18.3"
   },
   "devDependencies": {
