--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "db:migrate:deploy": "dotenv -e .env.local -- prisma migrate deploy",
     "db:studio": "dotenv -e .env.local -- prisma studio",
     "db:push": "dotenv -e .env.local -- prisma db push",
-    "db:seed": "dotenv -e .env.local -- tsx prisma/seed.ts"
+    "db:seed": "dotenv -e .env.local -- tsx prisma/seed.ts",
+    "test:webhooks": "npx tsx scripts/verify-webhook-setup.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -25,6 +26,7 @@
     "@stripe/react-stripe-js": "^5.0.0",
     "@stripe/stripe-js": "^8.0.0",
     "bcryptjs": "^3.0.2",
+    "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "next-auth": "^5.0.0-beta.29",
     "prisma": "^6.16.3",
