--- a/.env.example
+++ b/.env.example
@@ -12,13 +12,17 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_..."
 STRIPE_SECRET_KEY="sk_test_..."
 STRIPE_WEBHOOK_SECRET="whsec_..."
 
-# Email Provider (Resend example)
+# Email Provider (Resend)
+# Optional - defaults to noreply@salonbase.app if not set
 EMAIL_FROM="noreply@yourdomain.com"
+# Required for email functionality
 EMAIL_API_KEY="re_..."
 
-# SMS Provider (Twilio example)
+# SMS Provider (Twilio)
+# Required for SMS functionality
 TWILIO_ACCOUNT_SID="AC..."
 TWILIO_AUTH_TOKEN="..."
+# Your Twilio phone number in E.164 format
 TWILIO_PHONE_NUMBER="+1..."
 
 # Inngest (for notifications)
