--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "db:push": "dotenv -e .env.local -- prisma db push",
     "db:seed": "dotenv -e .env.local -- tsx prisma/seed.ts",
     "test:webhooks": "npx tsx scripts/verify-webhook-setup.ts",
-    "test:receipts": "npx tsx scripts/test-receipt-generation.ts"
+    "test:receipts": "npx tsx scripts/test-receipt-generation.ts",
+    "test:email-sms": "npx tsx scripts/test-email-sms.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -37,6 +38,7 @@
     "react-dom": "19.1.0",
     "resend": "^6.1.2",
     "stripe": "^19.1.0",
+    "twilio": "^5.10.2",
     "ws": "^8.18.3"
   },
   "devDependencies": {
