--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@stripe/react-stripe-js": "^5.0.0",
     "@stripe/stripe-js": "^8.0.0",
     "bcryptjs": "^3.0.2",
+    "inngest": "^3.44.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "next-auth": "^5.0.0-beta.29",
