add data import logic

--- a/package.json
+++ b/package.json
@@ -35,19 +35,22 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "next-auth": "^5.0.0-beta.29",
+    "papaparse": "^5.5.3",
     "prisma": "^6.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "resend": "^6.1.2",
     "stripe": "^19.1.0",
     "twilio": "^5.10.2",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv": "^17.2.3",
